[project]
name = "learn-dl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pdm>=2.15.2",
    "torch>=2.3.0",
    "d2l>=1.0.3",
    "numpy>=1.23.5",
    "matplotlib>=3.7.2",
    "torchvision>=0.18.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
